--- a/app/styles/text.scss
+++ b/app/styles/text.scss
@@ -11,6 +11,8 @@ h1 {
 
 	img { height:45px; }
 
+	i { vertical-align:middle; }
+
 	@include media(max-width-1449) {
 		font-size:46px;
 		img { height:34px; }
@@ -38,6 +40,8 @@ h2 {
 
 	img { height:29px; }
 
+	i { vertical-align:middle; }
+
 	@include media(max-width-550) {
 		font-size:30px;
 		line-height:1.3;
@@ -59,9 +63,12 @@ h3 {
 
 	img { height:23px; }
 
+	i { vertical-align:middle; }
+
 }
 
 h4 {
+
 	font-size:22px;
 	font-weight:600;
 	line-height:1.2;
@@ -70,9 +77,13 @@ h4 {
 	color:var(--text-color);
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
+
+	i { vertical-align:middle; }
+
 }
 
 h5 {
+
 	font-size:18px;
 	font-weight:600;
 	line-height:1.2;
@@ -81,6 +92,9 @@ h5 {
 	color:var(--text-color);
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
+
+	i { vertical-align:middle; }
+
 }
 
 li {
@@ -137,14 +151,13 @@ l {
 	border-radius:4px;
 	white-space:nowrap;
 	display:inline-block;
-	vertical-align:text-top;
+	vertical-align:middle;
 	text-transform:uppercase;
 	color:var(--faint-color);
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing:antialiased;
 	font-family:var(--system-font-mono);
 	border:1px solid var(--faint-color);
-
 
 	[flex] & {
 		margin:0 10px;
